--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 
 <body dir="rtl">
-<p style="color: #225588 ;">  این سایت فقط برای اذیت کردن <abbr title="خیلی مشنگی :))))))"> 
-    <i>مهسا</i> </abbr> ایجاد شده است و هیچ ارزش دیگری ندارد! </p>
+<h1 style="color: #225588 ;">  این سایت فقط برای اذیت کردن <abbr title="خیلی مشنگی :))))))"> 
+    <i>مهسا</i> </abbr> ایجاد شده است و هیچ ارزش دیگری ندارد! </h1>
 </body>
