--- a/index.html
+++ b/index.html
@@ -6,6 +6,50 @@
 </head>
 
 <body dir="rtl">
-<h1 style="color: #225588 ;">  این سایت فقط برای اذیت کردن <abbr title="خیلی مشنگی :))))))"> 
-    <i>مهسا</i> </abbr> ایجاد شده است و هیچ ارزش دیگری ندارد! </h1>
+<h2 style="color: #225588 ;">  این سایت فقط برای اذیت کردن <abbr title="خیلی مشنگی :))))))"> 
+    <i>مهسا</i> </abbr> ایجاد شده است و هیچ ارزش دیگری ندارد! </h2>
+
+    <p style="color: #765384;">
+        بارون میومد.... هنوزم میاد...
+        <br>از محوطه دانشگاه زدم به دل خیابون خزان زده، زیر نم نم بارون تو حال و هوای خودم بودم که یکی گوشه مانتوم رو کشید.....
+<br>-خاله میشه آدامس بخری 
+<br>+نه عزیزم لازم ندارم 
+<br>-خاله تورو خدا یه دونه بخر 
+<br>خریدم؛ باقی پول رو پس داد، دلم نیومد بگیرم
+<br>+ برای خودت خاله 
+<br>با هم هم  مسیر شدیم.
+<br>هندزفری هامو در آوردم و باهاش هم کلام شدم.
+<br>+ اسمت چیه؟ 
+<br>-امیر علی 
+<br>+چه قشنگه اسمت، امیرعلی چند سالته؟ 
+<br>-۱۲ سال ولی خیلی کارا بلدم. 
+<br>تو یه نگاه تیپ و هیکلش و زیر نظر بردم...تو اون هوای سرد یه جفت دمپایی کهنه آبی پاش بود، یه تیشرت نه چندان نو و تمیز، جثه ریزی داشت ولی فرز بود.... 
+<br>بارون میبارید، هنوز میباره....
+<br>صداش از فکر و خیال پرتم کرد بیرون.
+<br>-خاله تو زبان بلدی؟ 
+<br>+آره، چطور؟ 
+<br>-میشه بهم یاد بدی؟ 
+<br>+اوهوم  ، هلو میشه.... 
+<br>نزاشت حرفم تموم بشه،ای بابا اینا رو که بلدم، هلو میشه سلام، هوآریو میشه چطوری، یس میشه بله و.... 
+<br>+آفرین، کی بهت یاد داده؟ 
+<br>-مامانم
+<br>+چه مامان مهربونی داری 
+<br>-آره خاله، مامان باباها خیلی خوبن، بهمون غذا میدن، جای خواب میدن. خاله از اونور برو خیس نشی. چای میدن خیلی خوبن.... 
+<br>بارون میبارید... هنوزم میباره.... 
+<br>امیرعلی کودک کار بود، آرزوها داشت... 
+<br>میخواست همه کاره بشه، دکتر بشه اونایی که نیازمندن رو درمان کنه، معلم بشه به اونایی که نمیتونن درس بخونن درس بده، خیر بشه و برای بچه ها خونه بسازه.... 
+<br>صبح تا شب میرفت سرکار که پول مواد بابا و مامانش رو جور کنه... روزی 60تومن. دوتا خواهر داشت و یه دنیا آرزو برا اونا.... 
+<br>امیرعلی ببخشید من اونقدر بزرگ نشدم که غمی ازت پاک کنم
+<br>ببخشید اگه تو تو اون هوا کتونی نداشتی و میلرزیدی
+<br>ببخشید اگه توان من همون یه بسته آدامس بود
+<br>ببخشید اگه نمیتونم تو رو به آرزوهات برسونم 
+<br>
+<br>موقع خداحافظی گفت خاله من میدونم چرا ازم ادامس خریدی. چون فهمیدی فقیرم دلت سوخت برام
+<br>حالا دستتو بیار. 
+<br>دستمو گرفتم جلوش
+<br>باقی پول آدامس رو گذاشت کف دستم و فرار کرد... صداش زدم. برنگشت... 
+<br>من موندم و یه خیابون خزان زده و پول مچاله شده دستم.... 
+<br>بارون میومد.. هنوزم میاد... 
+<br>امیرعلی امیدوارم زیر بارون نمونی خاله...
+    </p>
 </body>
