--- a/index.html
+++ b/index.html
@@ -52,4 +52,74 @@
 <br>بارون میومد.. هنوزم میاد... 
 <br>امیرعلی امیدوارم زیر بارون نمونی خاله...
     </p>
+<br>
+    <p style="color:#221166">
+        <br>‌تا دستگیره ی در پایین رفت، کتابی که الکی توی دستم گرفته بودمو پرت کردم کناری و با سرعتی که ازم بعید بود بلند شدم و نشستم رو تخت.
+        <br> دزد ناشیِ من درو آروم پشت سرش بست و توی تاریکی کیسه های توی دستشو گذاشت روی ترالیِ نزدیکش. سعی می‌کرد سر و صدا نکنه که مثلا من بی خواب نشم. توی دلم حسابی قربون صدقه ی قد و بالاش رفتم!
+        <br> گمونم تشنه ش بود! از یخچال یه آب میوه برداشت و یه نفس سرکشید. خنده م گرفت
+        <br> " خوش می‌گذره؟! " 
+        <br> از جا پرید اما خودشو از تک و تا ننداخت. با مشت زد رو کلید و چراغو روشن کرد و انگشت اشاره شو گرفت سمتم و با قیافه ی برزخش بازخواستم کرد
+        <br> تا این ساعت بیدار بودی؟!
+        <br> مگه من قدغن نکرده بودم بَ...! 
+        <br> پریدم وسط حرفش
+        <br> " توپ تانک فشفشه...
+        <br> دیگر اثر ندارد!
+        <br> الکی قیافه نگیر برام، نمی‌ترسم ازت! "
+        <br> تهشم زبونمو تا جایی که می‌شد درآوردم بیرون و خندیدم!
+        <br> یادش بخیر! یه زمانی چقدر حساب می‌بردم ازش. با این قد و هیکل وقتی عصبانی می‌شد ‌ترسناک می‌شد خب!
+        <br> سعی می‌کرد نخنده
+       <br> بالاخره قسمت میشه این زبونِ درازتو خودم کوتاه کنم برات!
+       <br> خودشو با جابجا کردن خریداش سرگرم کرد. نیشم باز شد
+       <br> " شتر در خواب بیند پنبه دانه!
+       <br> بعدم می‌دونستم میای، برا همون منتظرت بودم. اذیت نکن دیگه!
+       <br> نگهبانه رو چجوری پیچوندی؟! اینو بگو! "
+       <br> بالاخره کوهِ غرورم خندید
+       <br> یه کم سیبیلشو چرب کردم! 
+       <br> خنده م گرفت. نگهبان بیچاره اصلا سیبیل نداشت، باز کیو واسطه کرده خدا می‌دونه!
+       <br> یه چنگال و بشقاب و کمپوت برداشت و اومد نشست کنارم رو تخت.
+       <br> دست کشیدم به کله ی کچلش. کم کم داشتن جوونه می‌زدن موهاش. سرشو از زیر دستم کشید کنار
+       <br> " نکن بچه! مور مورم میشه! "
+       <br> خندیدم و سرک کشیدم تا بهتر ببینم چیزی که می‌خوامو برام خریده یا نه! وقتی به نتیجه ای نرسیدم از خودش که مشغول باز کردن کمپوت آناناس بود پرسیدم
+       <br> " برام پاستیل گرفتی؟! "
+       <br> نگاهم نکرد
+       <br> " نچ! کمپوت گرفتم برات عوضش!
+       <br> پاستیل خوب نیست! "
+       <br> دست به سینه نشستم و اداشو درآوردم
+       <br> پاستیل خوب نیست!
+       <br> من که همه شو بالا میارم، چه فرقی می‌کنه دیگه!
+       <br> برو واسه عمه ت کمپوت بگیر!
+       <br> یه تیکه آناناس زد سر چنگال و گرفت جلوی دهنمو با خنده گفت:
+       <br> " برا اونم می‌گیرم به وقتش. الان نوبت توئه! "
+       <br> حرصم گرفت
+       <br> نمی‌خوام!
+       <br> اصلا پاشو برو، الان مامانم بیاد ببیندت مثل سریِ قبل خون به پا می کنه باز!
+       <br> با بی‌خیالی داشت دولپی کمپوتی که مثلا برا من گرفته بودو می‌خورد
+       <br> " هیچی نمیشه، نگرانش نباش! "
+       <br> دست کشیدم به سرم که مویی نداشت و مچاله شدم توو خودم. عادی شده بود برام درد و سیم و لوله هایی که وصل بودن بهم...
+       <br> به خاطر خودت میگه هرچی میگه، بیشتر از من به فکر توئه. دلش نمی‌خواد عذاب کشیدن تورو هم ببینه.
+       <br> اون سری وقتی فهمید موهاتو به خاطر من زدی دیوونه شد، نمی‌خواد زندگیت خراب شه، می‌ترسه چیزیم بشه و اونوقت تو...! 
+       <br> دستشو گذاشت جلوی دهنم و نرم اشکامو پاک کرد.
+       <br> خودشو کنارم رو تخت جا کرد و با احتیاط کشیدم توو بغلش
+       <br> هر آدمی از عشق یه سهمی داره...
+       <br> سهم بعضیا اندازه ی یه نگاهه موقع عبور از هم،
+       <br> سهم بعضیا قد یه بوسه ست توی مستی،
+       <br> سهم بعضیام یه چند روز عاشقیه و یه عمر مرور خاطرات اون چند روز...
+       <br> سهم یه عده از عشق جدائیه،
+       <br> سهم یه عده ی دیگه م وصال!
+       <br> زندگی قصه ی شاه پریون نیست که اولش همیشه با یکی بود یکی نبود شروع شه و تهش به تا آخر عمر به خوبی و خوشی زندگی کردن ختم شه!
+       <br> بالا داره، پائین داره، سخت داره، آسون داره، صحت داره، بیماریم داره، مهم اینه توی این فراز و نشیبا ول نکنیم دست همو...
+       <br> من به سهمم از عشق راضیم، حتی اگه تهش اون چیزی نشه که دلم می‌خواد. "
+       <br> دستشو دورم محکم‌تر کرد
+       <br> اینارو به مامانتم گفتم.
+       <br> سرمو بلند کردم و با تعجب نگاهش کردم
+       <br> یعنی قبول کرد؟! الان می‌دونه اینجائی؟! 
+       <br> خندید
+       <br> " نه بابا! اونم برگشت گفت پسر جون بَر و رو نداری که داری! کار و خونه و زندگی نداری که داری! فقط یه جو عقل باید داشته باشی که نداری! بیا برو پیِ سرنوشتت یه جایِ دیگه! بذار مام به درد خودمون بسوزیم!
+       <br> بعد شیمی درمانیم نذاشت دیگه ببینمت، انداختم بیرون! "
+       <br> بلند زدم زیر خنده
+       <br> الان چجوری اینجایی پس! 
+       <br> یه لبخند زد برام که ۳۲ تا دندونشو با هم دیدم
+       <br> " بالاخره همکارامون هوامو دارن اینجا، آمارشو گرفتم، رفته خونه تون، تا صبحم نمیاد! "
+       <br> از ته دل خندیدم و بیشتر مچاله شدم توی آغوششو فکر کردم منم به سهمم از عشق راضیم، به شرطی که بهشت آغوشِ این مرد باشه! :)📼🌱        
+    </p>
 </body>
