--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>
         mashang.com 
     </title>
+    <meta charset="utf-8"
 </head>
+
 
 <body dir="rtl">
 <h2 style="color: #225588 ;">  این سایت فقط برای اذیت کردن <abbr title="خیلی مشنگی :))))))"> 
@@ -122,4 +124,12 @@
        <br> " بالاخره همکارامون هوامو دارن اینجا، آمارشو گرفتم، رفته خونه تون، تا صبحم نمیاد! "
        <br> از ته دل خندیدم و بیشتر مچاله شدم توی آغوششو فکر کردم منم به سهمم از عشق راضیم، به شرطی که بهشت آغوشِ این مرد باشه! :)📼🌱        
     </p>
+<br><br>
+    <pre> بنظر شما آیا یک تخته ی نویسنده ی این مقاله کم است؟ 
+    
+        <span> بله یک تخته اش کم است:     </span> <meter value="0.3"></meter> <span>30%</span>
+        <span> خیر بیشتر از یک تخته کم دارد: </span> <meter value="0.7"></meter> <span>70%</span>
+     </pre>
+
+
 </body>
