--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 
-<body dir="rtl" style="background-color: #F5F5DC >
+<body dir="rtl" style="background-color: #b8b88d7d >
 <h2 style="color: #225588 ;">  این سایت فقط برای اذیت کردن <abbr title="خیلی مشنگی :))))))"> 
     <i>مهسا</i> </abbr> ایجاد شده است و هیچ ارزش دیگری ندارد! </h2>
 
